[gd_scene load_steps=2 format=3 uid="uid://tutorial_overlay"]

[ext_resource type="Script" path="res://scripts/ui/tutorial_overlay.gd" id="1_tutorial"]

[node name="TutorialOverlay" type="CanvasLayer"]
layer = 100
script = ExtResource("1_tutorial")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -180.0
offset_right = 160.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Welcome to LenKinVerse!"
horizontal_alignment = 1
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="MessageLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "A blockchain alchemy lab on Solana.

Collect materials by walking, analyze them, and create new elements!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="StepLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Step 1 / 7"
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SkipButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SKIP"

[node name="NextButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "NEXT"

[node name="HighlightArrow" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="HighlightArrow"]
layout_mode = 0
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 6.0
text = "ðŸ‘‡"
horizontal_alignment = 1
vertical_alignment = 1
